# prsi

./: .env.example  .gitignore  ACTION_PLAN.md  ACTION_PLAN_FINAL.md  ACTION_PLAN_HONEST.md  DATA_INTEGRATION_PLAN.md  DATA_STRATEGY.md  Dockerfile  EXECUTION_SUMMARY.md  FINAL_SUMMARY.md  HPC_EXECUTION_GUIDE.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_V4.md  MODIFICATIONS_SUMMARY.md  Makefile  PRODUCTION_ADDITIONS.md  QUICKSTART.md  README.md  README_DATA_PIPELINE.md  amplifier.py  api.py  api.py.backup  api_v2.py  build_neo4j_graph.py  common_utils.py  data_size.txt  dataset_inventory.txt  demo.py  demo_final.py  demo_inference.py  demo_viva_presentation.py  docker-compose-production.yml  docker-compose.yml  download_models.py  dvc.yaml  evaluate_model.py  frontend.html  generate_10k_job.pbs  generate_adversarial_data.py  generate_adversarial_data_10k.py  (+38 more)
.github/workflows/: cd.yml  ci.yml
config/: config.yaml
configs/: eval.yaml  hpc_distilbert.yaml  multimodal.yaml
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: model_card.md
models/: cancellation_predictor_full.pkl
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: clean_and_split_dataset.py  clean_dataset.py  consolidate_datasets.py  consolidate_datasets.py.save  consolidate_production.py  hpc_orchestrator.py  migrate_v4.py  restore_full_dataset.py  run_data_pipeline.sh  run_pipeline_v2.py  slurm_launcher.sh  slurm_multinode_h100.sh  split_dataset.py  train_multimodal_simple.py  train_text_baseline.py  train_text_baseline.py.broken  train_text_baseline_v2.py  viva_demo.py
src/: __init__.py  config.py  logger.py
src/api/: __init__.py  api_v2_production.py  cache.py  monitoring.py  torchserve_config.py
src/attacks/: __init__.py  adversarial_generator.py  adversarial_production.py  (+4 more)
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_load.py
(+116 files in other folders)
