[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doom-index"
version = "2.0.0"
description = "Predictive Social Doom Index with Multimodal GNN + Transformer Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vivek Pandey", email = "vivek.120542@stu.upes.ac.in"}
]
keywords = ["machine-learning", "nlp", "gnn", "social-media", "cancellation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pymongo>=4.5.0",
    "neo4j>=5.14.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]
privacy = [
    "opacus>=1.4.0",
    "flwr>=1.5.0",
]
attack = [
    "textattack>=0.3.8",
]

[project.scripts]
doom-train = "train_multimodal:main"
doom-api = "api_v2:main"
doom-demo = "demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
